<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2021 Telenav, Inc. All rights reserved. Telenav® is a registered trademark
  ~ of Telenav, Inc.,Sunnyvale, California in the United States and may be registered in
  ~ other countries. Other names may be trademarks of their respective owners.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.telenav.sdk.demo.scenario.mapview.MapViewCameraFragment">

    <include
        android:id="@+id/action_bar"
        layout="@layout/layout_action_bar" />

    <com.telenav.map.views.TnMapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_control"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_control"
        android:layout_width="200dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <Button
            android:id="@+id/btn_set_vehicle_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/set_vehicle_icon"
            android:textAllCaps="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_set_vehicle_icon_bitmap"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/set_vehicle_icon_bitmap"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_set_vehicle_icon" />

        <Button
            android:id="@+id/btn_locate_map_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/locate_map_center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/btn_set_vehicle_icon_bitmap"
            app:layout_constraintStart_toStartOf="@+id/btn_set_vehicle_icon_bitmap"
            app:layout_constraintTop_toBottomOf="@+id/btn_set_vehicle_icon_bitmap" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>