<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.telenav.sdk.examples.scenario.navigation.realReach.RealReachViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/drawer_layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:minHeight="?android:actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="real reach" />

        <com.telenav.map.views.TnMapView
            android:id="@+id/map_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="real reach type:  "
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/real_reach_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    android:text="@{viewModel.realReachType.name()}" />
            </LinearLayout>

            <LinearLayout
                android:visibility="@{viewModel.realReachType.index ==1 ? View.GONE : View.VISIBLE }"
                android:layout_marginTop="@dimen/dim_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="request mode:  "
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_request_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp"
                    app:requestMode="@{viewModel.requestMode.ordinal()}" />
            </LinearLayout>

            <LinearLayout
                android:visibility="@{viewModel.realReachType.index ==1 ? View.GONE : View.VISIBLE }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="distance: "
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(viewModel.distance)}"
                    android:textColor="@color/colorAccent"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/selectRealReachType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Select real reach type"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/selectRequestMode"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/selectRequestMode"
            android:visibility="@{viewModel.realReachType.index ==1 ? View.GONE : View.VISIBLE }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/select_request_mode"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btInputDistance"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btInputDistance"
            android:visibility="@{viewModel.realReachType.index ==1 ? View.GONE : View.VISIBLE }"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/input_real_reach_distance"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/requestRealReach"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/requestRealReach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/request_real_reach"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/layoutProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="calculating"
                android:textColor="@color/colorVivid"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>